# baarn-raadsinformatie

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROGRESS.md  README.md  api_server.py  docker-compose.yml  mcp_server.py  pyproject.toml  requirements-embeddings.txt  requirements.txt  sync_service.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
agents/: README.md  __init__.py  actiepunten-tracker.yaml  amendement-maker.yaml  begrotings-analist.yaml  beleids-onderzoeker.yaml  besluit-tracker.yaml  burger-informant.yaml  coalitie-monitor.yaml  commissie-monitor.yaml  document-zoeker.yaml  externe-onderzoeker.yaml  ingekomen-stukken-tracker.yaml  journalist-assistent.yaml  motie-maker.yaml  motie-tracker.yaml  multi-gemeente-zoeker.yaml  orchestrator.yaml  personeel-informant.yaml  raadslid-assistent.yaml  raadsvragen-assistent.yaml  rekenkamer-analist.yaml  standpunt-analist.yaml  stemgedrag-analist.yaml  subsidie-tracker.yaml  toezeggingen-tracker.yaml  vergadering-analist.yaml  vergadering-voorbereiding.yaml  verkiezingsprogramma-zoeker.yaml  werkbezoek-verslag.yaml  woo-assistent.yaml
analyzers/: __init__.py  search_analyzer.py
configs/: copilot-studio-connector.json  openapi.json
core/: __init__.py  coalitie_tracker.py  config.py  database.py  document_index.py
data/: coalitieakkoord.yaml
providers/: __init__.py  document_generator.py  document_provider.py  dossier_provider.py  election_program_provider.py  meeting_provider.py  notubiz_client.py  search_sync_provider.py  standpunt_provider.py  summary_provider.py  transcription_provider.py  visit_report_provider.py
scripts/: check_readme_logo.py  create_soestdijk_compleet.py  create_soestdijk_doc.py  create_soestdijk_doc_uitgebreid.py  deduplicate_images.py  full_history_sync.py  generate_openapi.py  index_documents.py  install.bat  install.ps1  install.sh  install_scheduled_task.ps1  parallel_download.py  rebuild.ps1  restart_docker.bat  rotate_api_key.ps1  rotate_api_key.py  rotate_api_key.sh  search_sync.py  start.ps1  start.sh  start_sync_service.bat  uninstall_scheduled_task.ps1
shared/: __init__.py  cli_app.py  cli_progress.py  logging_config.py
tools/ffmpeg-master-latest-win64-gpl/doc/: ffplay-all.html
